--- a/package.json
+++ b/package.json
@@ -1,42 +1,29 @@
 {
-  "name": "test-driveco",
+  "name": "@driveco/root",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "c:format": "prettier --check .",
-    "c:format:fix": "prettier --write .",
-    "c:lint": "eslint . --max-warnings 0",
-    "c:lint:fix": "pnpm c:lint --fix",
-    "c:spell": "cspell .",
-    "c:test": "jest",
-    "c:type": "tsc --noEmit"
-  },
-  "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "dev": "pnpm -r dev",
+    "build": "pnpm -r build",
+    "c:format": "pnpm -r c:format",
+    "c:format:fix": "pnpm -r c:format:fix",
+    "c:lint": "pnpm -r c:lint",
+    "c:lint:fix": "pnpm -r c:lint:fix",
+    "c:spell": "pnpm -r c:spell",
+    "c:test": "pnpm -r c:test",
+    "c:type": "pnpm -r c:type"
   },
   "devDependencies": {
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.57",
-    "@types/react-dom": "18.2.19",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
-    "@vitejs/plugin-react": "4.2.1",
     "cspell": "8.4.1",
     "eslint": "8.56.0",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.5",
     "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "jest-fetch-mock": "3.0.3",
     "prettier": "3.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.3.3",
-    "vite": "5.1.3"
+    "tsx": "4.7.1",
+    "typescript": "5.3.3"
   }
 }
