--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,21 +13,49 @@
     "c:lint:fix": "pnpm c:lint --fix",
     "c:spell": "cspell .",
     "c:test": "jest",
-    "c:type": "tsc --noEmit"
+    "c:type": "tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@driveco/shared": "workspace:*",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@mui/icons-material": "5.15.10",
+    "@mui/material": "5.15.10",
+    "@mui/system": "5.15.9",
+    "@tanstack/react-query": "5.22.2",
+    "distance-from": "2.0.52",
+    "i18next": "23.9.0",
+    "i18next-browser-languagedetector": "7.2.0",
+    "i18next-http-backend": "2.5.0",
+    "leaflet": "1.9.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-i18next": "14.0.5",
+    "react-leaflet": "4.2.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-interactions": "7.6.17",
+    "@storybook/addon-links": "7.6.17",
+    "@storybook/blocks": "7.6.17",
+    "@storybook/react": "7.6.17",
+    "@storybook/react-vite": "7.6.17",
+    "@storybook/test": "7.6.17",
+    "@swc/jest": "0.2.36",
+    "@testing-library/react": "14.2.1",
+    "@types/leaflet": "1.9.8",
     "@types/react": "18.2.57",
     "@types/react-dom": "18.2.19",
     "@vitejs/plugin-react": "4.2.1",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.5",
+    "eslint-plugin-storybook": "0.8.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-fetch-mock": "3.0.3",
+    "storybook": "7.6.17",
     "vite": "5.1.3"
   }
 }
